@@ -5,6 +5,8 @@ import edu.fipp.ativooperante.repositories.UsuarioRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
+
 @Service
 public class UsuarioService {
 
@@ -12,7 +14,13 @@ public class UsuarioService {
     UsuarioRepository usuarioRepository;
 
     public Usuario findByEmail(String email) {
-        return usuarioRepository.findUsuarioByEmail(email).getFirst();
+        List<Usuario> usuarios = usuarioRepository.findUsuarioByEmail(email);
+
+        if (usuarios != null && !usuarios.isEmpty()) {
+            return usuarios.get(0);
+        }
+
+        return null;
     }
 
     public void save(Usuario usuario) {
